Fix viewport units on mobile

--- a/sass/_components.scss
+++ b/sass/_components.scss
@@ -8,6 +8,7 @@
 
 .header {
     height: 100vh;
+    height: calc(var(--vh, 1vh) *100);
     width: 100%;
     background-image: url(../images/bg.jpg);
     background-position: center;
